syntax = "proto3";

// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package messageloop.server.v1;

// buf:lint:ignore FILE_SAME_GO_PACKAGE
option go_package = "github.com/messageloopio/messageloop/shared/genproto/go/server/v1;serverpb";

import "includes/cloudevents/cloudevents.proto";
import "shared/v1/errors.proto";

service APIService {
  rpc Publish(PublishRequest) returns(PublishResponse);
  rpc Disconnect(DisconnectRequest) returns(DisconnectResponse);
  rpc Subscribe(SubscribeRequest) returns(SubscribeResponse);
  rpc Unsubscribe(UnsubscribeRequest) returns(UnsubscribeResponse);
  rpc Survey(SurveyRequest) returns(SurveyResponse);
}

message SurveyRequest {
  string request_id = 1;
  string channel = 2;
  io.cloudevents.v1.CloudEvent payload = 3;
  int32 timeout_ms = 4;
}

message SurveyResponse {
  string request_id = 1;
  repeated SurveyResult results = 2;
}

message SurveyResult {
  string session_id = 1;
  io.cloudevents.v1.CloudEvent payload = 2;
  messageloop.shared.v1.Error error = 3;
}

message Publication {
  message Options {
    bool add_history = 1;
  }

  message Destination {
    repeated string sessions = 1;
    repeated string channels = 2;
  }

  string id = 1;
  Destination destination = 2;
  Options options = 3;

  io.cloudevents.v1.CloudEvent payload = 4;
}

message PublishRequest {
  string request_id = 1;
  map<string, string> metadata = 2;
  repeated Publication publications = 3;
}

message PublishResponse {

}

message DisconnectRequest {
  repeated string sessions = 1;
  uint32 code = 2;
  string reason = 3;
}

message DisconnectResponse {
  map<string, bool> results = 1;
}

message SubscribeRequest {
  string session_id = 1;
  repeated string channels = 2;
}

message SubscribeResponse {
  map<string, bool> results = 1;
}

message UnsubscribeRequest {
  string session_id = 1;
  repeated string channels = 2;
}

message UnsubscribeResponse {
  map<string, bool> results = 1;
}